spacing fixed and css change to mobile first

--- a/src/assets/styles/_media-queries.scss
+++ b/src/assets/styles/_media-queries.scss
@@ -21,7 +21,7 @@
 
 /* Large desktop */
 @mixin xl {
-  @media (min-width: 1200px) {
+  @media (min-width: 980px) {
     @content;
   }
 }
